add loading statement and change diskdb import

--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -4,5 +4,6 @@
 		<title>SharpMod</title>
 	</head>
 	<body onload=" window.location = 'http://localhost:18044/'; ">
+		loading...
 	</body>
 </html>
