other misc changes

--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>SharpMod</title>
 	</head>
-	<body onload=" window.location = 'http://localhost:18044/'; ">
+	<body onload=" window.location = 'http://127.0.0.1:18044/'; ">
 		loading...
 	</body>
 </html>
