--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -2,8 +2,129 @@
 <html>
 	<head>
 		<title>SharpMod</title>
+		<meta charset="utf-8" />
+		<meta content="width=device-width" initial-scale="1.0 " name="viewport" />
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/css/select2.min.css" rel="stylesheet" type="text/css" />
+		<link href="stylesheets/style.css" rel="stylesheet" type="text/css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 	</head>
-	<body onload=" window.location = 'http://127.0.0.1:18044/'; ">
-		loading...
+	<body>
+		<div class="body-content container">
+			<div class="row" id="chatContent" style="display: none">
+				<div class="alert alert-warning" id="loadingEmotesMessage" role="alert">
+					<strong>Emoticons are currently loading.</strong>
+				</div>
+
+				<div class="alert alert-warning" id="successEmotesMessage" role="alert" style="display: none">
+					<button aria-label="Close" class="close" data-dismiss="alert" type="button">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<strong>Emoticons have been successfully loaded.</strong>
+				</div>
+
+				<div class="alert alert-warning" id="loadingBadgesMessage" role="alert">
+					<strong>Badges are currently loading.</strong>
+				</div>
+
+				<div class="alert alert-warning" id="successBadgesMessage" role="alert" style="display: none">
+					<button aria-label="Close" class="close" data-dismiss="alert" type="button">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<strong>Badges have been successfully loaded.</strong>
+				</div>
+
+				<ul class="nav nav-tabs" data-bind="foreach: channels">
+					<!-- li goes here -->
+					<!--<li class="active" role="presentation">
+						<a data-toggle="tab" href=" NAME OF CHANNEL HERE "></a>
+					</li>-->
+					<li class="active" role="presentation">
+						<a data-bind="attr:{href:channelName}" data-toggle="tab"></a>
+					</li>
+				</ul>
+
+				<div class="tab-content" data-bind="foreach: channels">
+					<!-- channel messages go here. with knockout -->
+					<div class="active tab-pane" data-bind="attr:{id:channelName}">
+						<div data-bind="foreach: messages">
+							<div class="comment panel panel-default">
+								<div class="panel-heading">
+									<h3 class="panel-title" data-bind="style:{color: color}">
+										parseAttributes(data.attributes) <strong data-bind="text:name"></strong>
+									</h3>
+								</div>
+								<div class="panel-body">
+									parseMessage(data.message, data.emote_set)
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<nav class="navbar navbar-default navbar-fixed-bottom">
+					<div class="container">
+						<div class="navbar-form navbar-left">
+							<form class="form-group" id="chatForm">
+								<input class="form-control" id="chatMessage" placeholder="Send a message" style="width: 280px" type="text" />
+							</form>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</div>
+
+		<div aria-hidden="true" aria-labelledby="myModalLabel" class="fade in modal" data-backdrop="static" data-keyboard="false" id="myModal" role="dialog" tabindex="-1">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h4 class="modal-title" id="myModalLabel">Login</h4>
+					</div>
+					<div class="modal-body">
+						<div class="row">
+							<!--<div class="col-md-4">-->
+							<div class="col-md-12">
+								<form action="/" id="loginForm" method="POST">
+									<div class="form-group">
+										<label for="username">Username</label>
+										<input class="form-control" id="username" name="username" placeholder="Username" required type="text" />
+									</div>
+
+									<div class="form-group">
+										<label for="password">Password</label>
+										<input class="form-control" id="password" name="password" placeholder="Password" required type="text" />
+									</div>
+
+									<div class="form-group">
+										<label for="password">Channel</label>
+										<div>
+											<select class="form-control" id="channel" name="channel" required style="width: 280px"></select>
+										</div>
+									</div>
+								</form>
+							</div>
+
+							<!--<div class="col-md-8">
+								<div class="embed-responsive embed-responsive-4by3">
+									<iframe src="http://www.twitchapps.com/tmi/"></iframe>
+								</div>
+							</div>-->
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button class="btn btn-primary" id="submitButton" type="button">Save changes</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/js/select2.min.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.4/socket.io.min.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js" type="text/javascript"></script>
+		<script src="javascripts/index.js" type="text/javascript"></script>
 	</body>
 </html>
