login is mostly working now!

--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -80,7 +80,7 @@
 					<div class="modal-header">
 						<h4 class="modal-title">Login to SharpMod</h4>
 					</div>
-					<form action="/" method="POST">
+					<form action="/" id="loginForm" method="POST">
 						<div class="modal-body">
 							<div class="row">
 								<div class="col-md-12">
@@ -97,7 +97,7 @@
 									<div class="form-group">
 										<label for="channel">Channel</label>
 										<div>
-											<select class="form-control" id="channel" name="channel" style="width: 100%"></select>
+											<select class="form-control" data-tags="true" id="channel" name="channel" style="width: 100%"></select>
 										</div>
 									</div>
 								</div>
