--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -16,45 +16,30 @@
 					<strong>Emoticons are currently loading.</strong>
 				</div>
 
-				<div class="alert alert-warning" id="successEmotesMessage" role="alert" style="display: none">
+				<div class="alert alert-success" id="successEmotesMessage" role="alert" style="display: none">
 					<button aria-label="Close" class="close" data-dismiss="alert" type="button">
 						<span aria-hidden="true">&times;</span>
 					</button>
 					<strong>Emoticons have been successfully loaded.</strong>
 				</div>
 
-				<div class="alert alert-warning" id="loadingBadgesMessage" role="alert">
-					<strong>Badges are currently loading.</strong>
-				</div>
-
-				<div class="alert alert-warning" id="successBadgesMessage" role="alert" style="display: none">
-					<button aria-label="Close" class="close" data-dismiss="alert" type="button">
-						<span aria-hidden="true">&times;</span>
-					</button>
-					<strong>Badges have been successfully loaded.</strong>
-				</div>
-
-				<ul class="nav nav-tabs" data-bind="foreach: channels">
-					<!-- li goes here -->
-					<!--<li class="active" role="presentation">
-						<a data-toggle="tab" href=" NAME OF CHANNEL HERE "></a>
-					</li>-->
+				<ul class="nav nav-tabs" data-bind="foreach: Channels">
 					<li class="active" role="presentation">
-						<a data-bind="attr:{href:channelName}" data-toggle="tab"></a>
+						<a data-bind="attr:{href:'#' + ChannelName}, text:'#' +ChannelName" data-toggle="tab"></a>
 					</li>
 				</ul>
 
-				<div class="tab-content" data-bind="foreach: channels">
-					<!-- channel messages go here. with knockout -->
-					<div class="active tab-pane" data-bind="attr:{id:channelName}">
-						<div data-bind="foreach: messages">
+				<div class="tab-content" data-bind="foreach: Channels">
+					<div class="active tab-pane" data-bind="attr:{id:ChannelName}">
+						<div data-bind="foreach: Comments">
 							<div class="comment panel panel-default">
 								<div class="panel-heading">
-									<h3 class="panel-title" data-bind="style:{color: color}">
-										parseAttributes(data.attributes) <strong data-bind="text:name"></strong>
+									<h3 class="panel-title" data-bind="style:{color: Color}">
+										<span data-bind="text: Badges"></span>
+										<strong data-bind="text:Name"></strong>
 									</h3>
 								</div>
-								<div class="panel-body">
+								<div class="panel-body" data-bind="text:Message">
 									parseMessage(data.message, data.emote_set)
 								</div>
 							</div>
@@ -65,9 +50,9 @@
 				<nav class="navbar navbar-default navbar-fixed-bottom">
 					<div class="container">
 						<div class="navbar-form navbar-left">
-							<form class="form-group" id="chatForm">
-								<input class="form-control" id="chatMessage" placeholder="Send a message" style="width: 280px" type="text" />
-							</form>
+							<!--<form class="form-group" id="chatForm">-->
+							<input class="form-control" data-bind="value:OutgoingMessage" id="chatMessage" placeholder="Send a message" style="width: 280px" type="text" />
+							<!--</form>-->
 						</div>
 					</div>
 				</nav>
