--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -35,13 +35,11 @@
 							<div class="comment panel panel-default">
 								<div class="panel-heading">
 									<h3 class="panel-title" data-bind="style:{color: Color}">
-										<span data-bind="text: Badges"></span>
+										<span data-bind="html: Badges"></span>
 										<strong data-bind="text:Name"></strong>
 									</h3>
 								</div>
-								<div class="panel-body" data-bind="text:Message">
-									parseMessage(data.message, data.emote_set)
-								</div>
+								<div class="panel-body" data-bind="html:Message"></div>
 							</div>
 						</div>
 					</div>
