--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -24,22 +24,24 @@
 				</div>
 
 				<ul class="nav nav-tabs" data-bind="foreach: Channels">
-					<li class="active" role="presentation">
-						<a data-bind="attr:{href:'#' + ChannelName}, text:'#' +ChannelName" data-toggle="tab"></a>
+					<li data-bind="css: {active: Selected}" role="presentation">
+						<a href="#" data-bind="click: $parent.SelectedChannel">
+							<span data-bind="text: '#' + ChannelName"></span>
+						</a>
 					</li>
 				</ul>
 
 				<div class="tab-content" data-bind="foreach: Channels">
-					<div class="active tab-pane" data-bind="attr:{id:ChannelName}">
+					<div class="tab-pane" data-bind="attr: {id: ChannelName}, css: {active: Selected}">
 						<div data-bind="foreach: Comments">
 							<div class="comment panel panel-default">
 								<div class="panel-heading">
-									<h3 class="panel-title" data-bind="style:{color: Color}">
+									<h3 class="panel-title" data-bind="style: {color: Color}">
 										<span data-bind="html: Badges"></span>
-										<strong data-bind="text:Name"></strong>
+										<strong data-bind="text: Name"></strong>
 									</h3>
 								</div>
-								<div class="panel-body" data-bind="html:Message"></div>
+								<div class="panel-body" data-bind="html: Message"></div>
 							</div>
 						</div>
 					</div>
@@ -47,10 +49,10 @@
 
 				<nav class="navbar navbar-default navbar-fixed-bottom">
 					<div class="container">
-						<div class="navbar-form navbar-left">
-							<!--<form class="form-group" id="chatForm">-->
-							<input class="form-control" data-bind="value:OutgoingMessage" id="chatMessage" placeholder="Send a message" style="width: 280px" type="text" />
-							<!--</form>-->
+						<div class="navbar-form">
+							<form class="form-group" id="chatForm">
+								<input class="form-control" data-bind="value: OutgoingMessage" id="chatMessage" placeholder="Send a message" type="text" />
+							</form>
 						</div>
 					</div>
 				</nav>
