--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -10,26 +10,30 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 	</head>
 	<body>
+		<div class="navbar navbar-default navbar-fixed-top">
+			<div class="container">
+				<ul class="nav navbar-nav" data-bind="foreach: Channels">
+					<li data-bind="css: {active: Selected}" role="presentation">
+						<a data-bind="click: $parent.SelectedChannel" href="#">
+							<span data-bind="text: '#' + ChannelName"></span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+
 		<div class="body-content container">
-			<div class="row" id="chatContent" style="display: none">
+			<div class="row">
 				<div class="alert alert-warning" id="loadingEmotesMessage" role="alert">
 					<strong>Emoticons are currently loading.</strong>
 				</div>
 
-				<div class="alert alert-success" id="successEmotesMessage" role="alert" style="display: none">
+				<div class="alert alert-success" id="successEmotesMessage" role="alert">
 					<button aria-label="Close" class="close" data-dismiss="alert" type="button">
 						<span aria-hidden="true">&times;</span>
 					</button>
 					<strong>Emoticons have been successfully loaded.</strong>
 				</div>
-
-				<ul class="nav nav-tabs" data-bind="foreach: Channels">
-					<li data-bind="css: {active: Selected}" role="presentation">
-						<a href="#" data-bind="click: $parent.SelectedChannel">
-							<span data-bind="text: '#' + ChannelName"></span>
-						</a>
-					</li>
-				</ul>
 
 				<div class="tab-content" data-bind="foreach: Channels">
 					<div class="tab-pane" data-bind="attr: {id: ChannelName}, css: {active: Selected}">
@@ -50,7 +54,7 @@
 				<nav class="navbar navbar-default navbar-fixed-bottom">
 					<div class="container">
 						<div class="navbar-form">
-							<form class="form-group" id="chatForm">
+							<form id="chatForm">
 								<input class="form-control" data-bind="value: OutgoingMessage" id="chatMessage" placeholder="Send a message" type="text" />
 							</form>
 						</div>
@@ -82,7 +86,7 @@
 									<div class="form-group">
 										<label for="channel">Channel</label>
 										<div>
-											<select class="form-control" data-tags="true" id="channel" name="channel" style="width: 100%"></select>
+											<select class="form-control" data-tags="true" id="channel" name="channel"></select>
 										</div>
 									</div>
 								</div>
