add close button to oauth modal

--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -111,10 +111,12 @@
 			</div>
 		</div>
 
-		<div aria-hidden="true" aria-labelledby="loginModalLabel" class="fade in modal" id="authTokenModal" role="dialog">
+		<div aria-hidden="true" class="fade in modal" id="authTokenModal" role="dialog">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
+						<button aria-label="Close" class="close" data-dismiss="modal" type="button">
+							<span aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title">Generate oauth token</h4>
 					</div>
 					<div class="modal-body">
