--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -31,21 +31,7 @@
 				<div class="tab-content" data-bind="foreach: Channels">
 					<div class="tab-pane" data-bind="attr: {id: ChannelName}, css: {active: Selected}">
 						<div data-bind="foreach: Comments">
-							<div class="well well-sm" id="singleComment">
-								<div class="btn-group list-inline" id="commentCommands">
-									<button aria-expanded="false" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" type="button">
-										<span class="caret"></span>
-									</button>
-									<ul class="dropdown-menu" role="menu">
-										<li>
-											<a href="#">BAN</a>
-										</li>
-										<li>
-											<a href="#">TIMEOUT</a>
-										</li>
-									</ul>
-								</div>
-
+							<div class="singleComment well well-sm" data-bind="click: showComment">
 								<span data-bind="html: Badges"></span>
 								<strong data-bind="text: Name, style: {color: Color}"></strong>
 								<span data-bind="html: Message"></span>
@@ -156,6 +142,33 @@
 							<button class="btn btn-primary" type="submit">Join</button>
 						</div>
 					</form>
+				</div>
+			</div>
+		</div>
+
+		<div aria-hidden="true" class="fade in modal" data-bind="with: SelectedComment" id="commentModal" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button aria-label="Close" class="close" data-dismiss="modal" type="button">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h4 class="modal-title">Comment</h4>
+					</div>
+					<div class="modal-body">
+						<div class="row">
+							<div class="col-md-12">
+								<span data-bind="html: Badges"></span>
+								<strong data-bind="text: Name, style: {color: Color}"></strong>
+								<span data-bind="html: Message"></span>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button class="btn btn-default" data-dismiss="modal" type="button">Cancel</button>
+						<button class="btn btn-primary" data-bind="click: timeout">TIMEOUT</button>
+						<button class="btn btn-primary" data-bind="click: ban">BAN</button>
+					</div>
 				</div>
 			</div>
 		</div>
