--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -1,188 +1,210 @@
 ﻿<!DOCTYPE html>
 <html>
-	<head>
-		<title>SharpMod</title>
-		<meta charset="utf-8" />
-		<meta content="width=device-width" initial-scale="1.0 " name="viewport" />
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.1/css/select2.min.css" rel="stylesheet" />
-		<link href="css/site.css" rel="stylesheet" type="text/css" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
-	</head>
-	<body>
-		<div class="navbar navbar-default navbar-fixed-top">
-			<div class="container">
-				<ul class="nav navbar-nav" data-bind="foreach: Channels">
-					<li data-bind="css: {active: Selected}" role="presentation">
-						<a data-bind="click: $parent.SelectedChannel" href="#">
-							<span data-bind="text: '#' + ChannelName"></span>
-						</a>
-					</li>
-				</ul>
+<head>
+	<title>SharpMod</title>
+	<meta charset="utf-8" />
+	<meta content="width=device-width" initial-scale="1.0 " name="viewport" />
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.1/css/select2.min.css" rel="stylesheet" />
+	<link href="css/site.css" rel="stylesheet" type="text/css" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+</head>
+<body>
+	<div class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<ul class="nav navbar-nav" data-bind="foreach: Channels">
+				<li data-bind="css: {active: Selected}" role="presentation">
+					<a data-bind="click: $parent.SelectedChannel" href="#">
+						<span data-bind="text: '#' + ChannelName"></span>
+					</a>
+				</li>
+			</ul>
 
-				<div class="nav navbar-nav pull-right">
-					<button class="btn btn-sm btn-success navbar-btn" id="joinChannel">Join Channel</button>
-				</div>
+			<div class="nav navbar-nav pull-right">
+				<button class="btn btn-sm btn-success navbar-btn" id="joinChannel">Join Channel</button>
 			</div>
 		</div>
+	</div>
 
-		<div class="body-content container">
-			<div class="row">
-				<div class="tab-content" data-bind="foreach: Channels">
-					<div class="tab-pane" data-bind="attr: {id: ChannelName}, css: {active: Selected}">
-						<div data-bind="foreach: Comments">
-							<div class="singleComment well well-sm" data-bind="click: showComment">
-								<span data-bind="text: Timestamp"></span>
-								<span data-bind="html: Badges"></span>
-								<strong data-bind="text: Name, style: {color: Color}"></strong>
-								<span data-bind="html: Message"></span>
-							</div>
+	<div class="body-content container">
+		<div class="row">
+			<div class="tab-content" data-bind="foreach: Channels">
+				<div class="tab-pane" data-bind="attr: {id: ChannelName}, css: {active: Selected}">
+					<div data-bind="foreach: Comments">
+						<div class="singleComment well well-sm" data-bind="click: showComment">
+							<span data-bind="text: Timestamp"></span>
+							<span data-bind="html: Badges"></span>
+							<strong data-bind="text: Name, style: {color: Color}"></strong>
+							<span data-bind="html: Message"></span>
 						</div>
 					</div>
 				</div>
-
-				<nav class="navbar navbar-default navbar-fixed-bottom">
-					<div class="container">
-						<div class="navbar-form">
-							<form data-bind="submit: sendMessage">
-								<input class="form-control" data-bind="value: OutgoingMessage" id="chatMessage" placeholder="Send a message" type="text" />
-							</form>
-						</div>
-					</div>
-				</nav>
 			</div>
-		</div>
 
-		<div aria-hidden="true" class="fade in modal" data-backdrop="static" data-keyboard="false" id="loginModal" role="dialog">
-			<div class="modal-dialog modal-sm">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h4 class="modal-title">Login to SharpMod</h4>
+			<nav class="navbar navbar-default navbar-fixed-bottom">
+				<div class="container">
+					<div class="navbar-form">
+						<form data-bind="submit: sendMessage">
+							<input class="form-control" data-bind="value: OutgoingMessage" id="chatMessage" placeholder="Send a message" type="text" />
+						</form>
 					</div>
-					<form action="/" id="loginForm" method="POST">
-						<div class="modal-body">
-							<div class="row">
-								<div class="col-md-12">
-									<div class="form-group">
-										<label for="username">Username</label>
-										<input class="form-control" id="username" name="username" required type="text" />
-									</div>
-
-									<div class="form-group">
-										<label for="password">Password</label>
-										<input class="form-control" id="password" name="password" required type="password" />
-									</div>
-
-									<div class="form-group">
-										<label for="channel">Channel</label>
-										<div>
-											<select class="form-control" data-tags="true" id="channel" name="channel"></select>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="modal-footer">
-							<button class="btn btn-info pull-left" id="getAuthButton" type="button">Get auth token</button>
-							<button class="btn btn-success" type="submit">Login</button>
-						</div>
-					</form>
 				</div>
-			</div>
+			</nav>
 		</div>
+	</div>
 
-		<div aria-hidden="true" class="fade in modal" id="authTokenModal" role="dialog">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button aria-label="Close" class="close" data-dismiss="modal" type="button">
-							<span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title">Generate oauth token</h4>
-					</div>
+	<div aria-hidden="true" class="fade in modal" data-backdrop="static" data-keyboard="false" id="loginModal" role="dialog">
+		<div class="modal-dialog modal-sm">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Login to SharpMod</h4>
+				</div>
+				<form action="/" id="loginForm" method="POST">
 					<div class="modal-body">
 						<div class="row">
 							<div class="col-md-12">
-								<div class="embed-responsive embed-responsive-4by3">
-									<iframe src="http://www.twitchapps.com/tmi/"></iframe>
+								<div class="form-group">
+									<label for="username">Username</label>
+									<input class="form-control" id="username" name="username" required type="text" />
+								</div>
+
+								<div class="form-group">
+									<label for="password">Password</label>
+									<input class="form-control" id="password" name="password" required type="password" />
+								</div>
+
+								<div class="form-group">
+									<label for="channel">Channel</label>
+									<div>
+										<select class="form-control" data-tags="true" id="channel" name="channel"></select>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="modal-footer">
-						<div class="text-left">
-							In order to log in, you must generate an oauth token. This is required. Please use the "Connect with Twitch" button above to generate your token. Copy that token and paste it into the password field on the previous form.
+						<button class="btn btn-info pull-left" id="getAuthButton" type="button">Get auth token</button>
+						<button class="btn btn-success" type="submit">Login</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+	<div aria-hidden="true" class="fade in modal" data-backdrop="static" data-keyboard="false" id="authTokenModal" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button aria-label="Close" class="close" data-dismiss="modal" type="button">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title">Generate oauth token</h4>
+				</div>
+				<div class="modal-body">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="embed-responsive embed-responsive-4by3">
+								<iframe src="http://www.twitchapps.com/tmi/"></iframe>
+							</div>
 						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<div class="text-left">
+						In order to log in, you must generate an oauth token. This is required. Please use the "Connect with Twitch" button above to generate your token. Copy that token and paste it into the password field on the previous form.
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<div aria-hidden="true" class="fade in modal" id="joinChannelModal" role="dialog">
-			<div class="modal-dialog modal-sm">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button aria-label="Close" class="close" data-dismiss="modal" type="button">
-							<span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title">Join Channel</h4>
-					</div>
-					<form id="joinChannelForm">
-						<div class="modal-body">
-							<div class="row">
-								<div class="col-md-12">
-									<div class="form-group">
-										<label for="newChannel">Channel</label>
-										<div>
-											<select class="form-control" data-tags="true" id="newChannel" name="newChannel"></select>
-										</div>
+	<div aria-hidden="true" class="fade in modal" data-backdrop="static" data-keyboard="false" id="joinChannelModal" role="dialog">
+		<div class="modal-dialog modal-sm">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button aria-label="Close" class="close" data-dismiss="modal" type="button">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title">Join Channel</h4>
+				</div>
+				<form id="joinChannelForm">
+					<div class="modal-body">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="form-group">
+									<label for="newChannel">Channel</label>
+									<div>
+										<select class="form-control" data-tags="true" id="newChannel" name="newChannel"></select>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="modal-footer">
-							<button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
-							<button class="btn btn-primary" type="submit">Join</button>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-
-		<div aria-hidden="true" class="fade in modal" data-bind="with: SelectedComment" id="commentModal" role="dialog">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button aria-label="Close" class="close" data-dismiss="modal" type="button">
-							<span aria-hidden="true">&times;</span>
-						</button>
-						<h4 class="modal-title">Comment</h4>
-					</div>
-					<div class="modal-body">
-						<div class="row">
-							<div class="col-md-12">
-								<span data-bind="text: Timestamp"></span>
-								<span data-bind="html: Badges"></span>
-								<strong data-bind="text: Name, style: {color: Color}"></strong>
-								<span data-bind="html: Message"></span>
-							</div>
-						</div>
 					</div>
 					<div class="modal-footer">
-						<button class="btn btn-default" data-dismiss="modal" type="button">Cancel</button>
-						<button class="btn btn-primary" data-bind="click: timeout">TIMEOUT</button>
-						<button class="btn btn-primary" data-bind="click: ban">BAN</button>
+						<button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
+						<button class="btn btn-primary" type="submit">Join</button>
 					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+	<div aria-hidden="true" class="fade in modal" data-backdrop="static" data-bind="with: SelectedComment" data-keyboard="false" id="commentModal" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Comment</h4>
+				</div>
+				<div class="modal-body">
+					<div class="row">
+						<div class="col-md-12">
+							<span data-bind="text: Timestamp"></span>
+							<span data-bind="html: Badges"></span>
+							<strong data-bind="text: Name, style: {color: Color}"></strong>
+							<span data-bind="html: Message"></span>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-default" data-bind="click: closeComment">Cancel</button>
+					<button class="btn btn-danger" data-bind="click: ban">BAN</button>
+
+					<button aria-expanded="false" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" type="button">
+						TIMEOUT <span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" role="menu">
+						<li>
+							<a data-bind="click: function(){timeout(1);}">1 second</a>
+						</li>
+						<li>
+							<a data-bind="click: function(){timeout(30);}">30 seconds</a>
+						</li>
+						<li>
+							<a data-bind="click: function(){timeout(60);}">1 minute</a>
+						</li>
+						<li>
+							<a data-bind="click: function(){timeout(300);}">5 minutes</a>
+						</li>
+						<li>
+							<a data-bind="click: function(){timeout(900);}">15 minutes</a>
+						</li>
+						<li>
+							<a data-bind="click: function(){timeout(3600);}">60 minutes</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.1/js/select2.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.4/socket.io.min.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js" type="text/javascript"></script>
-		<script src="javascript/index.js" type="text/javascript"></script>
-	</body>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.1/js/select2.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.4/socket.io.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js" type="text/javascript"></script>
+	<script src="javascript/index.js" type="text/javascript"></script>
+</body>
 </html>
