implement some mod powers

--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -167,6 +167,7 @@
 				</div>
 				<div class="modal-footer">
 					<button class="btn btn-default" data-bind="click: closeComment">Cancel</button>
+					<button class="btn btn-success" data-bind="click: unban">UNBAN</button>
 					<button class="btn btn-danger" data-bind="click: ban">BAN</button>
 
 					<button aria-expanded="false" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" type="button">
