--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta content="width=device-width" initial-scale="1.0 " name="viewport" />
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.1/css/select2.min.css" rel="stylesheet" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.2/css/select2.min.css" rel="stylesheet" />
 	<link href="css/site.css" rel="stylesheet" type="text/css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 </head>
@@ -59,7 +59,7 @@
 				<div class="modal-header">
 					<h4 class="modal-title">Login to SharpMod</h4>
 				</div>
-				<form action="/" id="loginForm" method="POST">
+				<form data-bind="submit:login">
 					<div class="modal-body">
 						<div class="row">
 							<div class="col-md-12">
@@ -83,7 +83,7 @@
 						</div>
 					</div>
 					<div class="modal-footer">
-						<button class="btn btn-info pull-left" id="getAuthButton" type="button">Get auth token</button>
+						<button class="btn btn-info pull-left" data-bind="click:showTokenAuthModal" type="button">Get auth token</button>
 						<button class="btn btn-success" type="submit">Login</button>
 					</div>
 				</form>
@@ -91,7 +91,7 @@
 		</div>
 	</div>
 
-	<div aria-hidden="true" class="fade in modal" data-backdrop="static" data-keyboard="false" id="authTokenModal" role="dialog">
+	<div aria-hidden="true" class="fade in modal" data-backdrop="static" data-keyboard="false" id="tokenAuthModal" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -104,7 +104,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="embed-responsive embed-responsive-4by3">
-								<iframe src="http://www.twitchapps.com/tmi/"></iframe>
+								<iframe data-bind="attr:{src:TokenAuthUrl}"></iframe>
 							</div>
 						</div>
 					</div>
@@ -127,7 +127,7 @@
 					</button>
 					<h4 class="modal-title">Join Channel</h4>
 				</div>
-				<form id="joinChannelForm">
+				<form data-bind="submit: joinChannel">
 					<div class="modal-body">
 						<div class="row">
 							<div class="col-md-12">
@@ -202,7 +202,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" type="text/javascript"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.1/js/select2.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.2/js/select2.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.4/socket.io.min.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js" type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js" type="text/javascript"></script>
