--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -162,7 +162,7 @@
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
+					<button class="btn btn-default" data-dismiss="modal" type="button">Cancel</button>
 					<button class="btn btn-primary" type="submit">Join</button>
 				</div>
 			</form>
