move to atom-shell from node-webkit

--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -125,10 +125,8 @@
 			</div>
 			<div class="modal-body">
 				<div class="row">
-					<div class="col-md-12">
-						<div class="embed-responsive embed-responsive-4by3">
-							<iframe data-bind="attr:{src:TokenAuthUrl}"></iframe>
-						</div>
+					<div class="col-md-12" id="webview">
+						<webview src="http://sharpmod.azurewebsites.net"></webview>
 					</div>
 				</div>
 			</div>
