--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -8,6 +8,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-rc.2/css/select2.min.css" rel="stylesheet" />
 	<link href="css/site.css" rel="stylesheet" type="text/css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+	<link href="/assets/icon.png" rel="icon" type="image/png">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
