emit self and change name of user.Timeout

--- a/SharpMod.Node/index.html
+++ b/SharpMod.Node/index.html
@@ -67,8 +67,8 @@
 						<span data-bind="text: Timestamp"></span>
 						<span data-bind="html: Badges"></span>
 						<strong data-bind="text: Name, style: {color: Color}"></strong>
-						<span data-bind="html: Message, visible: !Timeout(), style: {color: MessageColor}"></span>
-						<span data-bind="visible: Timeout">message deleted. click to view</span>
+						<span data-bind="html: Message, visible: !Hidden(), style: {color: MessageColor}"></span>
+						<span data-bind="visible: Hidden">message deleted. click to view.</span>
 					</div>
 				</div>
 			</div>
