fix up a few last things

--- a/OpenBot/index.html
+++ b/OpenBot/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<title>OpenMod</title>
+	<title>OpenBot</title>
 	<meta charset="utf-8" />
 	<meta content="width=device-width" initial-scale="1.0 " name="viewport" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -89,7 +89,7 @@
 	<div class="modal-dialog modal-sm">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h4 class="modal-title">Login to OpenMod</h4>
+				<h4 class="modal-title">Login to OpenBot</h4>
 			</div>
 			<form data-bind="submit: login">
 				<div class="modal-body">
