change channel array to single channel

--- a/OpenBot/index.html
+++ b/OpenBot/index.html
@@ -20,37 +20,19 @@
 				<span class="icon-bar"></span>
 			</button>
 
-			<a class="hidden-lg hidden-md hidden-sm navbar-brand" data-bind="text: '#' + SelectedChannel().ChannelName, visible: SelectedChannel().ChannelName" href="#"></a>
+			<a class="hidden-lg hidden-md hidden-sm navbar-brand" data-bind="text: '#' + Channel().ChannelName, visible: Channel().ChannelName" href="#"></a>
 		</div>
 
 		<div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav" data-bind="foreach: Channels">
-				<li data-bind="css: {active: Selected}" role="presentation">
-					<a class="autoClose channelClose" data-bind="click: $parent.SelectedChannel, text: '#' + ChannelName" href="#"></a>
+			<ul class="nav navbar-nav">
+				<li class="active" role="presentation">
+					<a aria-controls="settings" data-toggle="tab" href="#settings" role="tab">Settings</a>
 				</li>
-			</ul>
-
-			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown">
-					<a aria-expanded="false" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button">Tools <span class="caret"></span></a>
-					<ul class="dropdown-menu" role="menu">
-						<li>
-							<a class="autoClose" data-bind="click: showJoinChannelModal" href="#">Join Channel</a>
-						</li>
-						<li>
-							<a class="autoClose" data-bind="click: showKeywordModal" href="#">Manage Keywords</a>
-						</li>
-						<li class="divider" data-bind="visible: ChannelIsSelected" role="presentation"></li>
-						<li class="dropdown-header" data-bind="visible: ChannelIsSelected" role="presentation">
-							Channel Tools
-						</li>
-						<li>
-							<a class="autoClose" data-bind="click: showUsers, visible: ChannelIsSelected" href="#">Users</a>
-						</li>
-						<li>
-							<a class="autoClose" data-bind="click: leaveChannel, visible: ChannelIsSelected" href="#">Leave Channel</a>
-						</li>
-					</ul>
+				<li role="presentation">
+					<a aria-controls="users" data-toggle="tab" href="#users" role="tab">Users</a>
+				</li>
+				<li role="presentation">
+					<a aria-controls="chat" data-toggle="tab" href="#chat" role="tab">Chat</a>
 				</li>
 			</ul>
 		</div>
@@ -59,9 +41,15 @@
 
 <div class="body-content container">
 	<div class="row">
-		<div class="tab-content" data-bind="foreach: Channels">
-			<div class="tab-pane" data-bind="attr: {id: ChannelName}, css: {active: Selected}">
-				<div data-bind="foreach: Comments">
+		<div class="tab-content">
+			<div class="active tab-pane" id="settings">
+				Show settings here!
+			</div>
+			<div class="tab-pane" id="users">
+				Show users here!
+			</div>
+			<div class="tab-pane" id="chat">
+				<div data-bind="foreach: Channel().Comments">
 					<div class="singleComment well well-sm" data-bind="click: showComment, css: {'bg-danger': Highlight}">
 						<span data-bind="text: Timestamp"></span>
 						<span data-bind="html: Badges"></span>
