--- a/OpenBot/index.html
+++ b/OpenBot/index.html
@@ -122,7 +122,7 @@
 			</div>
 			<div class="modal-body">
 				<div class="row">
-					<div class="col-md-12" id="webview">
+					<div class="col-md-12" id="webviewWrapper">
 						<webview data-bind="attr: {src: TokenAuthUrl}"></webview>
 					</div>
 				</div>
