change how the selected channel is displayed, bound, detected, and set

--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav" data-bind="foreach: Channels">
                 <li data-bind="css: {active: Selected}" role="presentation">
-                    <a class="autoClose channelClose" data-bind="click: $parent.SelectedChannel, text: ChannelHashName" href="#"></a>
+                    <a class="autoClose channelClose" data-bind="click: function(){$parent.Select(ChannelName);}, text: ChannelHashName" href="#"></a>
                 </li>
             </ul>
 
