fix styles after removing from site.css

--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -109,7 +109,9 @@
 
                             <div class="form-group">
                                 <label for="channel">Channel</label>
-                                <select class="select2" data-bind="value: LoginSelectedChannel" id="channel"></select>
+                                <div>
+                                    <select class="select2" data-bind="value: LoginSelectedChannel" id="channel" style="width: 100%"></select>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -163,7 +165,9 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="newChannel">Channel</label>
-                                <select class="select2" data-bind="value: LoginSelectedChannel" id="newChannel"></select>
+                                <div>
+                                    <select class="select2" data-bind="value: LoginSelectedChannel" id="newChannel" style="width: 100%"></select>
+                                </div>
                             </div>
                         </div>
                     </div>
