move stlye back to site.css

--- a/OpenMod/index.html
+++ b/OpenMod/index.html
@@ -110,7 +110,7 @@
                             <div class="form-group">
                                 <label for="channel">Channel</label>
                                 <div>
-                                    <select class="select2" data-bind="value: LoginSelectedChannel" id="channel" style="width: 100%"></select>
+                                    <select class="select2" data-bind="value: LoginSelectedChannel" id="channel"></select>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                             <div class="form-group">
                                 <label for="newChannel">Channel</label>
                                 <div>
-                                    <select class="select2" data-bind="value: LoginSelectedChannel" id="newChannel" style="width: 100%"></select>
+                                    <select class="select2" data-bind="value: LoginSelectedChannel" id="newChannel"></select>
                                 </div>
                             </div>
                         </div>
